--- a/11_MediaQueries/starter/mediaqueries.css
+++ b/11_MediaQueries/starter/mediaqueries.css
@@ -1,3 +1,5 @@
+
+
 body {
     box-sizing: border-box;
     font: 1.2em/1.2 Helvetica, sans-serif;
@@ -30,3 +32,30 @@ figure {
 figcaption {
     font-size: 0.8em;
 }
+
+
+@media screen and (min-width: 794px) {
+    body{
+        background: hsla(240, 100%, 50%, 0.2);
+        margin: 25px 6%;
+    }
+
+    figure {
+        float: left;
+        width: 40%;
+       margin-right: 4.5%;
+    }
+
+    @media screen {
+        body{
+            background: hsla(120, 100%, 50%, 0.2);
+            margin: 25px 10%;
+            max-width: 1130px;
+        }
+    
+        figure {
+            
+            width: 28%;
+           margin-right: 2.5%;
+        }
+    
